--- a/index.htm
+++ b/index.htm
@@ -17,11 +17,11 @@
     </head>
     <body>
           <header> 
-              <img src="C:\Users\Braden Mezo\Desktop\ITEC-236\MEZO_DEV_ITEC-236-REPOS-Mezo_DEV_ITEC-236\Pictures\Original_Grain_1.jpg"  alt="MPC Logo" width="250">
-              <img src="C:\Users\Braden Mezo\Desktop\ITEC-236\MEZO_DEV_ITEC-236-REPOS-Mezo_DEV_ITEC-236\Pictures\Bulova_1.jpg"          alt="MPC Logo" width="250">
-              <img src="C:\Users\Braden Mezo\Desktop\ITEC-236\MEZO_DEV_ITEC-236-REPOS-Mezo_DEV_ITEC-236\Pictures\Rolex_1.jpg"           alt="MPC Logo" width="250">
-              <img src="C:\Users\Braden Mezo\Desktop\ITEC-236\MEZO_DEV_ITEC-236-REPOS-Mezo_DEV_ITEC-236\Pictures\Citizen_1.jpg"         alt="MPC Logo" width="250">
-              <img src="C:\Users\Braden Mezo\Desktop\ITEC-236\MEZO_DEV_ITEC-236-REPOS-Mezo_DEV_ITEC-236\Pictures\G-Shock_1.jpg"         alt="MPC Logo" width="250">
+              <img src="Pictures/Original_Grain_1.jpg"  alt="MPC Logo" width="250">
+              <img src="Pictures/Bulova_1.jpg"          alt="MPC Logo" width="250">
+              <img src="Pictures/Rolex_1.jpg"           alt="MPC Logo" width="250">
+              <img src="Pictures/Citizen_1.jpg"         alt="MPC Logo" width="250">
+              <img src="Pictures/G-Shock_1.jpg"         alt="MPC Logo" width="250">
           </header>
           <main>
           <h1>Braden's Fine Watches</h1>
