--- a/index.htm
+++ b/index.htm
@@ -18,7 +18,7 @@
     <body>
           <header> 
               <img src="Pictures/Original_Grain_1.jpg"  alt="MPC Logo" width="250">
-              <img src="Pictures/Bulova_1.jpg"          alt="MPC Logo" width="250">
+              <img src="https://github.com/DisturbedData/ITEC236/blob/Mezo_Dev_Branch/Pictures/Bulova_1.jpg"          alt="MPC Logo" width="250">
               <img src="Pictures/Rolex_1.jpg"           alt="MPC Logo" width="250">
               <img src="Pictures/Citizen_1.jpg"         alt="MPC Logo" width="250">
               <img src="Pictures/G-Shock_1.jpg"         alt="MPC Logo" width="250">
